# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
accounts/: serializers.py  views.py
backend/: settings.py  urls.py
core/: admin.py  ai_assistant.py  models.py  permissions.py  serializers.py  signals.py  test_ai_assistant.py  test_assistant_api.py  test_auth_api.py  test_comment_api.py  test_item_api.py  test_serializers.py  test_signals.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_expand_lost_found_schema.py  0003_emailotp.py  0004_item_embedding.py  0005_item_latitude_item_longitude.py  0006_item_item_type.py  0007_alter_item_image.py  0008_item_image_focus_y.py  0009_comment_is_removed_commentreport.py
